feat: Implementar sistema completo de protección de base de datos
CRÍTICO: Prevenir pérdida de datos con sistema de backups automáticos

## Archivos creados:

### Scripts de backup/restore:
- cms/scripts/backup-db.sh: Crea backups automáticos de la DB
- cms/scripts/restore-db.sh: Restaura DB desde backups
- cms/scripts/README.md: Guía de uso de scripts
- cms/backups/.gitkeep: Estructura de carpetas para backups

### Documentación de seguridad:
- SEGURIDAD_BASE_DATOS.md: Protocolo completo de seguridad
  * Reglas críticas (nunca borrar .tmp/ sin backup)
  * Procedimientos seguros paso a paso
  * Workflow para resolver problemas
  * Checklist de seguridad
  * Historial de incidentes documentado

### Protección en Git:
- .gitignore actualizado:
  * Excluir backups de DB (privacidad y tamaño)
  * Marcar cms/.tmp/data.db* como crítico

## Características:

- ✅ Backups automáticos con timestamp
- ✅ Mantiene últimos 10 backups (rotación automática)
- ✅ Restauración simple con un comando
- ✅ Backup de seguridad antes de restaurar
- ✅ Scripts ejecutables y listos para cron
- ✅ Documentación completa de uso
- ✅ Primer backup creado (1.1MB)

## Prevención:

Este sistema previene la pérdida de datos que ocurrió el 2026-01-14
Establece reglas claras y procedimientos seguros para el futuro

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ build/
 # Temporary files
 *.tmp
 *.temp
+
+# Database backups (mantener local, no subir a Git)
+cms/backups/db/*.db
+cms/backups/*.log
+
+# CRÍTICO: Base de datos de Strapi (NO subir, NO borrar sin backup)
+cms/.tmp/data.db*
